bumping up to 1.1.2