@@ -2,9 +2,9 @@ import Dependencies._
 import Common._
 
 val commonSettings = Seq(
-    version := "1.1.2-SNAPSHOT",
+    version := "1.1.2",
     organization := "org.scalaxb",
-    homepage := Some(url("http://scalaxb.org")),
+  homepage := Some(url("http://scalaxb.org")),
     licenses := Seq("MIT License" -> url("https://github.com/eed3si9n/scalaxb/blob/master/LICENSE")),
     description := """scalaxb is an XML data-binding tool for Scala that supports W3C XML Schema (xsd) and wsdl.""",
     scalaVersion := "2.10.2",
@@ -25,7 +25,9 @@ val integration = Project("integration", file("integration")).
   settings(commonSettings: _*).
   settings(
     publishArtifact := false,
-    libraryDependencies ++= integrationDependencies(scalaVersion.value)
+    libraryDependencies <<= scalaVersion(integrationDependencies)
+    // fork in test := true,
+    // javaOptions in test ++= Seq("-Xmx2G", "-XX:MaxPermSize=512M")
   ).
   dependsOn(app)
 
@@ -33,7 +35,8 @@ val scalaxbPlugin = Project("sbt-scalaxb", file("sbt-scalaxb")).
   settings(commonSettings: _*).
   settings(
     sbtPlugin := true,
-    description := """sbt plugin to run scalaxb"""
+    description := """sbt plugin to run scalaxb""",
+    sbtVersion in Global := "0.12.4",
+    scalaVersion in Global := "2.9.2" 
   ).
   dependsOn(app)
-
